[package]
name = "geph-nat"
version = "0.1.6"
edition = "2021"
description = "concurrent NAT thingy used throughout Geph"
license = "ISC"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-net = "1.6.1"
lru = "0.7.8"
pnet_packet = "0.31.0"
fastrand="1"
bytes="1"
parking_lot = "0.12.1"
easy-parallel = "3.2.0"
log = "0.4.14"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false

[lib]
bench = false
