[package]
name = "geph-nat"
version = "0.1.8"
edition = "2021"
description = "concurrent NAT thingy used throughout Geph"
license = "ISC"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lru = "0.12.3"
pnet_packet = "0.34.0"
fastrand = "2"
bytes = "1"
parking_lot = "0.12.2"
easy-parallel = "3.3.1"
log = "0.4.21"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "benchmark"
harness = false

[lib]
bench = false
